// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Button should render snapshot correctly 1`] = `
<Button
  className="my-class"
  disabled={true}
  icon="tutti-cube"
  iconAfter="test-ico"
  level="primary"
  loading={false}
  rounded={true}
  size="large"
>
  <button
    className="my-class"
    disabled={true}
    type="submit"
  >
    <span
      className="ico ico-tutti-cube undefined"
      key="icon"
    />
    <span
      className={undefined}
      key="text"
    >
      Test content
    </span>
    <span
      className="ico ico-test-ico undefined"
      key="icon-after"
    />
  </button>
</Button>
`;

exports[`(Component) Button should render snapshot correctly 2`] = `
<Button
  className="my-class"
  disabled={true}
  icon="tutti-cube"
  iconAfter="test-ico"
  level="primary"
  loading={true}
  rounded={true}
  size="large"
>
  <button
    className="my-class undefined"
    disabled={true}
    type="submit"
  >
    <span
      className="ico ico-tutti-cube undefined"
      key="icon"
    />
    <span
      className={undefined}
      key="text"
    >
      Test content
    </span>
    <Spinner
      className={undefined}
      color="light"
      key="spinner"
      size={1.25}
    >
      <div
        className=""
      >
        <div
          className={undefined}
          style={
            Object {
              "borderBottom": "0.125rem solid rgba(255, 255, 255, 0.6)",
              "borderLeft": "0.125rem solid rgba(255, 255, 255, 0.8)",
              "borderRight": "0.125rem solid rgba(255, 255, 255, 0.6)",
              "borderTop": "0.125rem solid rgba(255, 255, 255, 0.6)",
              "height": "1.25rem",
              "width": "1.25rem",
            }
          }
        />
      </div>
    </Spinner>
    <span
      className="ico ico-test-ico undefined"
      key="icon-after"
    />
  </button>
</Button>
`;
